ai-service/test_bug_output.txt
  File "<string>", line 13
    print(f'  intent:  {r[\
          ^
SyntaxError: unterminated string literal (detected at line 13)
